reports/Untitled2.log
Traceback (most recent call last):
  File "/Applications/anaconda3/envs/plumed-masterclass-2022/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Applications/anaconda3/envs/plumed-masterclass-2022/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Applications/anaconda3/envs/plumed-masterclass-2022/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Applications/anaconda3/envs/plumed-masterclass-2022/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Applications/anaconda3/envs/plumed-masterclass-2022/lib/python3.10/asyncio/base_events.py", line 646, in run_until_complete
    return future.result()
  File "/Applications/anaconda3/envs/plumed-masterclass-2022/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Applications/anaconda3/envs/plumed-masterclass-2022/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Applications/anaconda3/envs/plumed-masterclass-2022/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
__Canonical Ensemble__

Basic Thermodynamics

In the microcanonical ensemble, the entropy S is a natural function of N,V and E, i.e., S=S(N,V,E). This can be inverted to give the energy as a function of N,V, and S, i.e., E=E(N,V,S). Consider using Legendre transformation to change from S to T using the fact that

displaymath135

The Legendre transform  tex2html_wrap_inline606 of E(N,V,S) is

eqnarray140

The quantity  tex2html_wrap_inline610 is called the Hemlholtz free energy and is given the symbol A(N,V,T). It is the fundamental energy in the canonical ensemble.

The differential of A is

displaymath146

However, from A=E-TS, we have

displaymath154

From the first law, dE is given by

displaymath156

Thus,

displaymath158

Comparing the two expressions, we see that the thermodynamic relations are

eqnarray160
------------------

[0;36m  Input [0;32mIn [1][0;36m[0m
[0;31m    __Canonical Ensemble__[0m
[0m                ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (3726404791.py, line 1)

